--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ anyhow = "1.0"
 axum = "0.8"
 axum-idempotent = "0.2"
 base64 = "0.22"
+chrono = "0.4"
 crossterm = "0.29"
 esruntime-sdk = { path = "crates/sdk" }
 esruntime-sdk-macros = { path = "crates/macros" }
@@ -16,9 +17,8 @@ proc-macro2 = "1.0"
 quote = "1.0"
 ratatui = "0.29"
 ruts = "0.7"
-serde = "1.0.145"
-serde_core = "1.0.228"
-serde_json = "1.0.145"
+serde = "1.0"
+serde_json = "1.0"
 syn = "2.0"
 thiserror = "2.0"
 tokio = "1.48"
