--- a/crates/sdk/Cargo.toml
+++ b/crates/sdk/Cargo.toml
@@ -5,8 +5,9 @@ edition = "2024"
 
 [dependencies]
 anyhow.workspace = true
+chrono = { workspace = true, features = ["serde"] }
 esruntime-sdk-macros.workspace = true
-serde_core.workspace = true
+serde = { workspace = true, features = ["derive"] }
 serde_json.workspace = true
 thiserror.workspace = true
 tracing.workspace = true
