feat: add before_commit hook to command trait

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,11 @@ crossterm = "0.29"
 esruntime-sdk = { path = "crates/sdk" }
 esruntime-sdk-macros = { path = "crates/macros" }
 esruntime-server = { path = "crates/server" }
+futures-util = "0.3"
 indexmap = "2.12"
 proc-macro2 = "1.0"
 quote = "1.0"
-ratatui = "0.29"
+ratatui = "0.30"
 ruts = "0.7"
 serde = "1.0"
 serde_json = "1.0"
@@ -25,6 +26,6 @@ thiserror = "2.0"
 tokio = "1.48"
 tower-http = "0.6"
 tracing = "0.1"
-umadb-client = "0.1.29"
-umadb-dcb = "0.1.29"
+umadb-client = "0.2"
+umadb-dcb = "0.2"
 uuid = "1.19"
