--- a/crates/sdk/Cargo.toml
+++ b/crates/sdk/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 anyhow.workspace = true
 chrono = { workspace = true, features = ["serde"] }
 esruntime-sdk-macros.workspace = true
+futures-util.workspace = true
 serde = { workspace = true, features = ["derive"] }
 serde_json.workspace = true
 thiserror.workspace = true
